--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <!-- for Google -->
+    <meta name="description" content="Find empty classrooms at UCSD" />
+    <meta name="keywords" content="empty, classrooms, UCSD" />
+    <meta name="author" content="Joel Sequeira" />
+    <meta name="application-name" content="UCSD Room Finder" />
+
+    <!-- for Facebook -->
+    <meta property="og:title" content="UCSD Room Finder" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://www.ucsdrooms.com/public/img/lecture.jpg" />
+    <meta property="og:url" content="http://www.ucsdrooms.com" />
+    <meta property="og:description" content="Find empty classrooms at UCSD" />
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <title>UCSD Room Finder</title>
   </head>
