Set EOQ to true and change description and name to UCSD Rooms

--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <!-- for Google -->
     <meta name="description" content="Find empty classrooms at UCSD" />
-    <meta name="keywords" content="empty, classrooms, UCSD" />
+    <meta name="keywords" content="empty, classrooms, UCSD, rooms, ucsd" />
     <meta name="author" content="Joel Sequeira" />
-    <meta name="application-name" content="UCSD Room Finder" />
+    <meta name="application-name" content="UCSD Rooms" />
 
     <!-- for Facebook -->
-    <meta property="og:title" content="UCSD Room Finder" />
+    <meta property="og:title" content="UCSD Rooms" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://www.ucsdrooms.com/public/img/lecture.jpg" />
     <meta property="og:url" content="http://www.ucsdrooms.com" />
     <meta property="og:description" content="Find empty classrooms at UCSD" />
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <title>UCSD Room Finder</title>
+    <title>UCSD Rooms</title>
   </head>
   <body>
     <div id="app"></div>
